syntax = "proto3";

option csharp_namespace = "ClientShelters";

package Authorization;

service Authorization {
	rpc LogIn (UserRequest) returns (UserReply);
} 

message UserRequest {
	string userName = 1;
	string password = 2;
}

message UserReply {
	int32 id_User = 1;
	string userName = 2;
	string password = 3;
	string name = 4;
	string surname = 5;
	string lastName = 6;
	int32 id_shelter = 7;	
	repeated string Roles = 8;
}