syntax = "proto3";

option csharp_namespace = "SheltersServer";

import "google/protobuf/timestamp.proto";
import "Protos/AuthorizationPr.proto";
package AnimalPr;


service Animaling {
	rpc AddAnimal (AddingAnimal) returns (IsCorrect);
	rpc GetAnimals (AnimalsFilts) returns (AnimalsReply);
	rpc UpdateAnimal (UpdatingAnimal) returns (IsCorrect);
	rpc ReleaseAnimal (ReleasingAnimal) returns (IsCorrect);
}

message ReleasingAnimal {
	int32 chipNum = 1;
	Authorization.UserReply user = 2;
	google.protobuf.Timestamp dateRel = 3;
	int32 sheltid = 4;
}

message AddingAnimal {
	Authorization.UserReply user = 1;
	int32 chipNum = 2;
	double size = 3;
	string color = 4;
	string sex = 5;
	string type = 6;
	google.protobuf.Timestamp dateAdding = 7;
	int32 contr_num = 8;
	int32 sheltid = 9;
} 

message AnimalsFilts {
	Authorization.UserReply user = 1;
	string filtSex = 2;
	string filtType = 3;
	string filtChip = 4;
	string filtColor = 5;
	string filtSize = 6;
	int32 sheltid = 7;
	int32 lastId = 8;
}

message UpdatingAnimal {
	Authorization.UserReply user = 1;
	int32 chipNum = 2;
	google.protobuf.Timestamp dateAdding = 7;
	int32 contr_num = 8;
	int32 sheltid = 9;
} 

message AnimalsReply {
	repeated AnimalReply animal = 1;
}

message AnimalReply {
	int32 ChipNum = 1; 
	double Size = 2;
	string Color = 3;
	string Sex = 4;
	string Type = 5;
}

message IsCorrect {
	bool isCorrect = 1;
}